<resources>
    <string name="app_name" translatable="false">TorrServe MatriX</string>
    <string name="add">Add</string>
    <string name="rutor" translatable="false">RuTor</string>
    <string name="delete">Delete</string>
    <string name="remove_all">Delete All</string>
    <string name="playlist">Playlist</string>
    <string name="donate">Donate</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="exit_title">Are You want to Exit?</string>
    <string name="exit_text">Local TorrServer will be stopped on Exit, if Accessibility Service is not enabled.</string>
    <string name="remove_all_warn">Do you want to delete all torrents?</string>
    <string name="share">Share</string>
    <string name="open_torrserve">Open TorrServe</string>
    <string name="open_with">Open With</string>
    <string name="show_menu">Show Main Menu</string>
    <string name="torrents">Torrents</string>
    <string name="apply">Apply</string>
    <string name="skip">Skip</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="default_sets">Default Settings</string>
    <string name="default_sets_applied">Default Settings Applied</string>
    <string name="cache_size">Cache Size (Megabytes)</string>
    <string name="preload_before_start">Preload Cache Before Start</string>
    <string name="preload_before_start_desc">If disabled, 32 MB buffer will be used for preload</string>
    <string name="torrent_preload" formatted="false">Readahead Cache (5–100%, rec. 95%)</string>
    <string name="torrent_preload_cache" formatted="false">Preload Cache Before Play (0–100%)</string>
    <string name="torrent_disconnect_timeout">Torrent Disconnect Timeout (seconds)</string>
    <string name="save_content_path">Path to Cache Store</string>
    <string name="save_on_disk">Use Cache on Disk</string>
    <string name="save_on_disk_desc">Better use RAM or external media on flash-based devices</string>
    <string name="remove_cache_on_drop">Remove Cache on Torrent Drop</string>
    <string name="remove_cache_on_drop_desc">If disabled, cache removed on torrent delete from DB</string>
    <string name="force_encrypt">Force Encrypt Headers</string>
    <string name="force_encrypt_desc">Can help with torrent blocking providers</string>
    <string name="enable_ipv6">IPv6</string>
    <string name="enable_ipv6_desc">Enable only if supported by ISP</string>
    <string name="enable_debug">Debug TorrServer Logging</string>
    <string name="enable_responsive_mode">Enable responsive reader mode</string>
    <string name="show_only_active_torrents_fs">Show only active torrents in the file system</string>
    <string name="enable_dlna">DLNA Media Server</string>
    <string name="dlna_friendly_name">DLNA Server Name</string>
    <string name="dlna_name_hint">Leave blank to use default</string>
    <string name="disable_tcp">TCP - Transmission Control Protocol</string>
    <string name="disable_tcp_desc">Don\'t disable without μTP enabled</string>
    <string name="disable_utp">μTP - Micro Transport Protocol</string>
    <string name="disable_utp_desc">Not recommended to enable on weak devices</string>
    <string name="disable_upnp">UPnP - Universal Plug and Play</string>
    <string name="disable_upnp_desc">Auto-open port on router</string>
    <string name="enable_rutor_search">Enable Rutor Torrents Search</string>
    <string name="enable_rutor_search_desc">NOTE: torrents database will occupy about 500 MB in RAM</string>
    <string name="disable_dht">DHT - Distributed Hash Table</string>
    <string name="disable_dht_desc">Disable if there is no network after starting the server</string>
    <string name="disable_pex">PEX - Peer Exchange</string>
    <string name="disable_pex_desc">Better leave enabled</string>
    <string name="disable_upload">Upload</string>
    <string name="disable_upload_desc">Not recommended to disable</string>
    <string name="connections_limit">Torrent Connections (20–25 recommended)</string>
    <string name="connections_dht_limit">Limit of DHT Connections (0 - unlimited)</string>
    <string name="download_rate_limit">Download Speed Limit (Kilobytes, 0 - unlimited)</string>
    <string name="upload_rate_limit">Upload Speed Limit (Kilobytes, 0 - unlimited)</string>
    <string name="retrackers">Retrackers</string>
    <string name="peers_listen_port">Peers Listen Port (0 - default)</string>
    <string-array name="retracker_mode">
        <item>Default</item>
        <item>Add retrackers</item>
        <item>Remove retrackers</item>
        <item>Replace retrackers</item>
    </string-array>
    <string name="proxy_p2p_enable">Enable proxy via TS</string>
    <string name="proxy_host_list">Host list</string>
    <string name="proxy_host_hint">Enter domains separated by commas. Wildcards are supported, for example: *themoviedb.org, *tmdb.org, rutor.info</string>
    <string name="select_player">Select Player</string>
    <string name="use_as_default">Save as Default</string>
    <string name="default_player">OS Default Player</string>
    <string name="choose_player">Always Ask</string>
    <string name="player_pref_key" translatable="false">player</string>
    <string name="app_theme_title">App Theme</string>
    <string-array name="app_theme_entries">
        <item>Auto</item>
        <item>Light</item>
        <item>Dark</item>
        <item>AMOLED</item>
    </string-array>
    <string-array name="app_theme_entries_values" translatable="false">
        <item>auto</item>
        <item>light</item>
        <item>dark</item>
        <item>black</item>
    </string-array>
    <string name="add_play">Add &amp; Play</string>
    <string name="play">Play</string>
    <string name="play_from_start">Play from beginning</string>
    <string name="make_as_def">Make as default</string>
    <string name="reset_def">Defaults cleared</string>
    <string name="playlist_all">Play All</string>
    <string name="playlist_continue">Continue</string>
    <string name="torrent_link">Torrent URL</string>
    <string name="torrent_link_help">Enter Torrent URL / Magnet / Hash</string>
    <string name="title">Title</string>
    <string name="poster">Poster</string>
    <string name="poster_link">Poster URL</string>
    <string name="poster_link_help">Enter Poster URL (optional)</string>
    <string name="torrent_category">Category</string>
    <string name="torrent_category_help">Set Category for Torrent (optional)</string>
    <string name="local_ip">Local IP</string>
    <string name="connected_host">Connected</string>
    <string name="find_hosts">Find hosts</string>
    <string name="local_server">Local server</string>
    <string name="saved_server">Saved server</string>
    <string name="new_server">New server</string>
    <string name="online">Online</string>
    <string name="buffer">Buffer</string>
    <string name="peers">Peers</string>
    <string name="seeds">Seeds</string>
    <string name="size">Size</string>
    <string name="download_speed">Download speed</string>
    <string name="bit_rate">Bitrate</string>
    <string name="found_new_app_update">App update found</string>
    <string name="not_found_new_app_update">App update not found</string>
    <string name="current_version">Current version</string>
    <string name="new_version">New version</string>
    <string name="server_update">TorrServer update</string>
    <string name="install_server">Install TorrServer</string>
    <string name="install_server_latest">Install / Update server</string>
    <string name="install_server_local">Install server from the Download folder</string>
    <string name="delete_local_server">Delete local server</string>
    <string name="app_settings">App Settings</string>
    <string name="app_version">App Version</string>
    <string name="host_title">Set TorrServer URL</string>
    <string name="speedtest_title">TorrServer Speed Test</string>
    <string name="speedtest_title_desc">Test speed to TorrServer</string>
    <string name="host_authorization">Server Authorization</string>
    <string name="host_authorization_desc">Enter username and password separated by a colon (user:password), leave blank for no auth.</string>
    <string name="local_auth_title">Local TorrServer with Authorization</string>
    <string name="local_auth_sum_on">Use authorization on local server</string>
    <string name="local_auth_sum_off">Don\'t use authorization on local server</string>
    <string name="torserver_title">TorrServer Settings</string>
    <string name="torserver_summary">Configure TorrServer settings</string>
    <string name="remove_action_title">Clear Actions Defaults</string>
    <string name="remove_action_summary">Reset default OS application for torrent</string>
    <string name="boot_start_title">Start Server on Boot</string>
    <string name="boot_start_sum_on">Start server on boot enabled</string>
    <string name="boot_start_sum_off">Start server on boot disabled</string>
    <string name="root_start_title">Start Server by root</string>
    <string name="root_start_sum_on">Start server by root enabled</string>
    <string name="root_start_sum_off">Start server by root disabled</string>
    <string name="webdav_start_title">Start server with WebDAV</string>
    <string name="webdav_start_sum_on">Start server with WebDAV is enabled</string>
    <string name="webdav_start_sum_off">Start server with WebDAV is disabled</string>
    <string name="choose_player_title">Choose Player</string>
    <string name="show_banner_title">Show Banner</string>
    <string name="show_banner_sum_on">Show banner on load torrent</string>
    <string name="show_banner_sum_off">Don\'t show banner on load torrent</string>
    <string name="show_cover_title">Show Poster</string>
    <string name="show_cover_sum_on">Show torrent poster</string>
    <string name="show_cover_sum_off">Don\'t show torrent poster</string>
    <string name="sort_torrents_list_title">Sort Torrents List Alphabetically</string>
    <string name="sort_torrents_list_sum_on">Sort torrents alphabetically</string>
    <string name="sort_torrents_list_sum_off">Sort torrents by time added</string>
    <string name="show_battery_save_title">Show battery save settings</string>
    <string name="show_battery_save_summary">Open settings with battery save configs</string>
    <string name="show_fab_title">Floating menu button in portrait</string>
    <string name="show_fab_sum_on">Show floating action button</string>
    <string name="show_fab_sum_off">Don\'t show floating action button</string>
    <string name="show_sort_fab_title">Floating sort button in portrait</string>
    <string name="show_sort_fab_sum_on">Show floating sort button</string>
    <string name="show_sort_fab_sum_off">Don\'t show floating sort button</string>
    <string name="show_cat_fab_title">Floating categories button in portrait</string>
    <string name="show_cat_fab_sum_on">Show floating categories button</string>
    <string name="show_cat_fab_sum_off">Don\'t show floating categories button</string>
    <string name="accessibility_service_description">Enabling this service can prevent local TorrServer shutdown by OS</string>
    <string name="switch_accessibility_title">Accessibility Service</string>
    <string name="switch_accessibility_summary_on">Press to disable TorrServe service</string>
    <string name="torrserver_log">TorrServer journal</string>
    <string name="torrserver_log_summary">View local TorrServer journal</string>
    <string name="proxy_settings">Proxy Settings</string>
    <string name="proxy_type">Proxy Type</string>
    <string name="proxy_host">Proxy Host</string>
    <string name="proxy_port">Proxy Port</string>
    <string name="proxy_user">Proxy Username</string>
    <string name="proxy_password">Proxy Password</string>
    <string name="proxy_mode">Proxy Mode</string>
</resources>