<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="prefs">

    <PreferenceCategory
        style="@style/HeadPreferenceCategory"
        android:key="data"
        android:title="@string/app_settings" />

    <Preference
        app:key="host"
        app:summary="@string/host_title"
        app:title="@string/host_title" />

    <Preference
        app:key="speedtest"
        app:summary="@string/speedtest_title_desc"
        app:title="@string/speedtest_title" />

    <Preference
        app:key="server_settings"
        app:summary="@string/torserver_summary"
        app:title="@string/torserver_title" />

    <Preference
        app:key="showlog"
        app:summary="@string/torrserver_log_summary"
        app:title="@string/torrserver_log" />

    <EditTextPreference
        app:key="server_auth"
        app:summary="@string/host_authorization_desc"
        app:title="@string/host_authorization" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:summaryOff="@string/local_auth_sum_off"
        android:summaryOn="@string/local_auth_sum_on"
        app:key="local_auth"
        app:title="@string/local_auth_title" />

    <PreferenceCategory
        style="@style/HeadPreferenceCategory"
        android:key="proxy"
        android:title="@string/proxy_settings" />

    <ListPreference
        android:defaultValue=""
        app:entries="@array/proxy_type_entries"
        app:entryValues="@array/proxy_type_values"
        app:key="proxy_type"
        app:title="@string/proxy_type" />

    <ListPreference
        android:defaultValue="tracker"
        app:entries="@array/proxy_mode_entries"
        app:entryValues="@array/proxy_mode_values"
        app:key="proxy_mode"
        app:title="@string/proxy_mode"
        app:dependency="proxy_type" />

    <EditTextPreference
        app:key="proxy_host"
        app:title="@string/proxy_host"
        app:dependency="proxy_type" />

    <EditTextPreference
        app:key="proxy_port"
        app:title="@string/proxy_port"
        app:dependency="proxy_type" />

    <EditTextPreference
        app:key="proxy_user"
        app:title="@string/proxy_user"
        app:dependency="proxy_type" />

    <EditTextPreference
        app:key="proxy_password"
        app:title="@string/proxy_password"
        app:dependency="proxy_type" />


    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:dependency="switch_accessibility"
        android:summaryOff="@string/boot_start_sum_off"
        android:summaryOn="@string/boot_start_sum_on"
        app:key="boot_start"
        app:title="@string/boot_start_title" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:summaryOff="@string/root_start_sum_off"
        android:summaryOn="@string/root_start_sum_on"
        app:key="root_start"
        app:title="@string/root_start_title" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:summaryOff="@string/webdav_start_sum_off"
        android:summaryOn="@string/webdav_start_sum_on"
        app:key="webdav_start"
        app:title="@string/webdav_start_title" />

    <ListPreference
        app:key="@string/player_pref_key"
        app:title="@string/choose_player_title" />

    <Preference
        app:key="remove_action"
        app:summary="@string/remove_action_summary"
        app:title="@string/remove_action_title" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:summaryOff="@string/show_banner_sum_off"
        android:summaryOn="@string/show_banner_sum_on"
        app:key="show_banner"
        app:title="@string/show_banner_title" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:summaryOff="@string/show_cover_sum_off"
        android:summaryOn="@string/show_cover_sum_on"
        app:key="show_cover"
        app:title="@string/show_cover_title" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:summaryOff="@string/sort_torrents_list_sum_off"
        android:summaryOn="@string/sort_torrents_list_sum_on"
        app:key="sort_torrents"
        app:title="@string/sort_torrents_list_title" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:summaryOff="@string/show_fab_sum_off"
        android:summaryOn="@string/show_fab_sum_on"
        app:key="show_fab"
        app:title="@string/show_fab_title" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:summaryOff="@string/show_sort_fab_sum_off"
        android:summaryOn="@string/show_sort_fab_sum_on"
        app:key="show_sort_fab"
        app:title="@string/show_sort_fab_title" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:summaryOff="@string/show_cat_fab_sum_off"
        android:summaryOn="@string/show_cat_fab_sum_on"
        app:key="show_cat_fab"
        app:title="@string/show_cat_fab_title" />

    <ListPreference
        android:defaultValue="auto"
        app:entries="@array/app_theme_entries"
        app:entryValues="@array/app_theme_entries_values"
        app:key="app_theme"
        app:summary="%s"
        app:title="@string/app_theme_title" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:disableDependentsState="true"
        android:summaryOff="@string/accessibility_service_description"
        android:summaryOn="@string/switch_accessibility_summary_on"
        app:key="switch_accessibility"
        app:title="@string/switch_accessibility_title" />

    <Preference
        app:key="show_battery_save"
        app:summary="@string/show_battery_save_summary"
        app:title="@string/show_battery_save_title" />

    <Preference
        app:key="version"
        app:title="@string/app_version" />

</PreferenceScreen>